src/components/section/viz/LineChart.scss
#line-chart {
  position: relative;
  height: 100%;

  .viz-svg-wrap {
    width: calc(80vw - 320px);
    overflow: hidden;
  }

  @media only screen and (max-aspect-ratio: 12/10) {
    .viz-svg-wrap {
      width: 90vw;
      max-height: calc(90vh - 16.4vw);
    }
  }
  @media only screen and (max-width: 900px) and (min-aspect-ratio: 12/10) {
    .viz-svg-wrap {
      width: calc(85vw - 180px);
    }
  }
  /* Axes */
  .axis>.domain {
    display: none;
  }
  .axis text {
    font-size: 0.9em;
    color: var(--light);
  }
  .axis>.tick {
    position: relative;
  }
  .axis.x text {
    transform: translateX(1.6em);
  }
  .axis.y text {
    transform: translateY(-0.8em);
  }
  .bottom-axis {
    stroke: var(--dark);
    stroke-linecap: round;
  }

  /* Grid lines */
  .grid>.domain {
    display: none;
  }
  .grid line {
    stroke: var(--line);
    stroke-width: 1;
  }

  .data-line {
    stroke: var(--dark);
    stroke-linejoin: round;
    fill: none;
    transition: stroke 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
  }
  .data-line.faded {
    stroke: var(--line);
  }
  .reg-line {
    stroke: var(--theme);
    stroke-linejoin: round;
    fill: none;
  }
  .reg-line-label-text {
    position: absolute;
    transform: translate(0.9em, 1.27em);
    font-weight: 700;
    font-style: italic;
    font-size: 0.9em;
  }
  .reg-line-label-text>.span {
    fill: var(--normal);
    transition: fill 800ms var(ease-out-cubic);
  }
  .reg-line-label-text>.span.off {
    fill: var(--light);
  }
  .reg-line-label-rect {
    height: 1.8em;
    fill: var(--background);
    stroke: var(--line);
  }
  .reg-line-label-rect.linear {
    width: 4.6em;
  }
  .reg-line-label-rect.quadratic {
    width: 7.6em;
  }
  .reg-line-label-rect.cosine {
    width: 15.6em;
  }


  // Hover elements
  .hover-line {
    stroke: var(--line);
  }
  .hover-data-circle {
    fill: var(--theme);
  }
  .hover-data-circle.out {
    fill: var(--light);
  }
  .hover-text-group {
    font-size: 0.9em;
  }
  .hover-text-group>text {
    font-weight: 700;
  }

  .hover-data-label,
  .hover-reg-label,
  .hover-diff-label {
    fill: var(--light);
  }
  .hover-data-text {
    fill: var(--dark);
    transform: translateX(8.4em);
  }
  .hover-data-text.out {
    fill: var(--light);
  }

  .hover-reg-circle {
    fill: var(--theme);
  }
  .hover-reg-label {
    transform: translateY(1.8em);
  }
  .hover-reg-text {
    fill: var(--theme);
    transform: translate(7.3em, 1.8em);
  }

  .hover-diff-line {
   stroke: var(--error);
  }
  .hover-diff-label {
    transform: translateY(3.6em);
  }
  .hover-diff-text {
    fill: var(--error);
    transform: translate(9.1em, 3.6em);
  }

  // MSE
  .mse-group {
    font-size: 1.1em;
  }
  .mse-group>text {
    font-weight: 700;
  }
  .mse-label {
    fill: var(--light);
  }
  .mse-text {
    fill: var(--error);
    transform: translateX(2.8em);
  }
}

